I added a lot of functionality to the calculator as well as styled it with CSS. I had to look at a few edge cases such as dividing by zero and the user continually trying to hit the decimal button. Once there is an error displayed on the screen, the user has to hit AC to restart. The project is mostly done; although, when the number is quite large, I have set the overflow to hidden, which will display the incorrect numbers once they are too big. This only happened when I maxed out the numbers and would never happen if the user was using the calculator normally. All the other cases should be accounted for. I realized I could put in a button for the user to delete an incorrect click, but I don't think it would look good on my overall layout. I will likely not include it. If I continue working on this project, I will have to fix the very large numbers that are currently being hidden within the display div.

--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
+* {
+    background-color: #e5e5dc;
+}
+
 #buttonContainer{
-    background-color: tomato;
+    background-color:#c4a35a;
     transform: translate(-50%, -50%);
     position: absolute;
     top: 50%;
     left: 50%;
     height: 400px;
     width: 404px;
+    border-radius: 2px;
 
 }
 
 #buttonOperators{
-    background-color: teal;
     position: absolute;
-    height: 300px;
-    width: 124px;
-    right: 0px;
+    height: 290px;
+    width: 114px;
+    right: 10px;
     top: 100px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -22,37 +26,81 @@
 
 .operator{
     text-align: center;
-    position: relative;
+    position:relative;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #26495c;
+    color: #e5e5dc;
+}
+
+#equalBtn{
+    background-color:#26495c;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
+    color: #e5e5dc;
+}
+
+#clearBtn{
+    background-color: #26495c;
+    font-family: 'Courier New', Courier, monospace;
+    color: #e5e5dc;
+    font-size: 25px;
 }
 
 #numbers{
     position: absolute;
-    left: 0px;
-    bottom:0px;
-    width: 280px;
-    height: 300px;
-    background-color: rgb(58, 33, 148);
+    left: 10px;
+    bottom:10px;
+    width: 260px;
+    height: 290px;
+    /* background-color: rgb(58, 33, 148); */
     grid-template-columns: repeat(3, 1fr);
     display: grid;
+    
 }
 
 .number{
 
     text-align: center;
     position:relative;
-    /* padding: 15px 32px; */
-    /* display: inline-block; */
     font-size: 25px;
-    
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #c66b3d;
+    color: #e5e5dc;
+}
+
+#decimal{
+    text-align: center;
+    position:relative;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #c66b3d;
+    color: #e5e5dc;
+}
+
+#plusMinus{
+    text-align: center;
+    position:relative;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #c66b3d;
+    color: #e5e5dc;
 }
 
 #display{
     position: absolute;
-    top: 0px;
-    background-color: thistle;
+    background-color: #e5e5dc;
     height: 80px;
-    width: 394px;
-    left: 5px;
-    right: 5px;
+    width: 384px;
+    left: 10px;
+    right: 10px;
     top: 10px;
+    font-size: 46px;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
 }
